# Trading-bot

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  agent.py  alerting.py  async_fetcher.py  auto_optimizer.py  backtest_runner.py  backtester.py  config.py  context_engine.py  data_fetcher.py  data_snapshot.py  decision.py  decision_engine.py  decision_logger.py  demo_data.py  dev.sh  docker-compose.yml  drift_detector.py  equity_curve.html  exceptions.py  executor.py  graceful_shutdown.py  indicators.py  live_btc_data.csv  live_test.py  logger.py  market_impact.py  meta_learner.py  model.py  multi_timeframe.py  multi_timeframe_fetcher.py  notifier.py  (+23 more)
api/: __init__.py  data_store.py  server.py  websocket_manager.py
arbitrage/: __init__.py  execution_engine.py  fee_calculator.py  funding_arbitrage.py  latency_tracker.py  opportunity_detector.py  price_monitor.py  triangular_arbitrage.py
context/: __init__.py  funding.py  oi_trend.py  session.py  swing.py  volatility.py  whale_flow.py
dashboard/: Dockerfile  package-lock.json  package.json
intelligence/: __init__.py  aggregator.py  cascade_predictor.py  correlation.py  fear_greed.py  funding_oi.py  liquidation.py  llm_sentiment.py  news_sentiment.py  onchain.py  orderbook.py  whale_tracker.py
risk_simulation/: __init__.py  monte_carlo.py  scenarios.py  var_calculator.py  visualizer.py
scripts/: backtest_3yr.py  backtest_5yr.py  backtest_phase9_1yr.py
tests/: conftest.py  test_agent.py  test_alerting.py  test_api.py  test_arbitrage.py  (+59 more)
(+62 files in other folders)
