[project]
name = "crypto-trading-agent"
version = "9.0.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line too long — handled by formatter
    "B905",    # zip-without-strict
    "SIM108",  # ternary instead of if-else
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM300"]
